--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
   <meta charset="utf-8">
-  <title></title>
+  <title>Freedom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+  <div class="wrapper">
+    <p class="quote">Az akadály az a rémisztő dolog, amelyet akkor látunk, ha levesszük szemünket a célról.”</p>
+    <p class="author"><small>Henry Ford</small></p>
+  </div>
 </body>
 </html>
